namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: prod
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    name: prod
