agency-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agency
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: agency
  template:
    metadata:
      labels:
        app: agency
    spec:
      containers:
      - name: agency
        image: redahimmi/national-transfer-agency-service
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
        imagePullPolicy: Always
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health/readiness
        #     port: 8081
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /actuator/health/liveness
        #     port: 8081
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        
        ports:
        - containerPort: 8081
