api-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: prod
  annotations:
    argocd.argoproj.io/hook: PostSync
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: redahimmi/national-transfer-api-gateway:e09096a2adb82928d3f6309f71680faa12bc092b
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
        imagePullPolicy: Always
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health/readiness
        #     port: 8091
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /actuator/health/liveness
        #     port: 8091
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        ports:
        - containerPort: 8091
