batch-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batch
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: batch
  template:
    metadata:
      labels:
        app: batch
    spec:
      containers:
      - name: batch
        image: redahimmi/national-transfer-batch-service
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8099
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8099
          initialDelaySeconds: 30
          periodSeconds: 10
        ports:
        - containerPort: 8099
