charge-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: charge
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: charge
  template:
    metadata:
      labels:
        app: charge
    spec:
      containers:
      - name: charge
        image: redahimmi/national-transfer-charge-service
        resources:
          limits:
            memory: "300Mi"
            cpu: "100m"
        imagePullPolicy: Always
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health/readiness
        #     port: 8088
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /actuator/health/liveness
        #     port: 8088
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        ports:
        - containerPort: 8088
