fraud-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fraud
  template:
    metadata:
      labels:
        app: fraud
    spec:
      containers:
      - name: fraud
        image: redahimmi/national-transfer-fraud-service
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8085
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8085
          initialDelaySeconds: 30
          periodSeconds: 10
        
        ports:
        - containerPort: 8085
