gab-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gab
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gab
  template:
    metadata:
      labels:
        app: gab
    spec:
      containers:
      - name: gab
        image: redahimmi/national-transfer-gab-service
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8087
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8087
          initialDelaySeconds: 30
          periodSeconds: 10
        
        ports:
        - containerPort: 8087
