kyc-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kyc
  template:
    metadata:
      labels:
        app: kyc
    spec:
      containers:
      - name: kyc
        image: redahimmi/national-transfer-kyc-service
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
        imagePullPolicy: Always
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health/readiness
        #     port: 8084
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /actuator/health/liveness
        #     port: 8084
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        
        ports:
        - containerPort: 8084
