rabbitmq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8.20
          ports:
            - containerPort: 5672
            - containerPort: 15672 # RabbitMQ Management Plugin
          resources:
            limits:
              memory: "500Mi"
              cpu: "200m"
