transfer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transfer
  template:
    metadata:
      labels:
        app: transfer
    spec:
      containers:
      - name: transfer
        image: redahimmi/national-transfer-transfer-service
        resources:
          limits:
            memory: "512Mi"
            cpu: "200m"
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 10
        
        ports:
        - containerPort: 8082
