account-service.yml
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: prod
spec:
  selector:
    app: account
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8083
    protocol: TCP
