api-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: prod
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8091
    protocol: TCP
