batch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: batch-service
  namespace: prod
spec:
  selector:
    app: batch
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8099
    protocol: TCP
