configserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: prod
  # annotations:
  #   argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: config
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8090
    protocol: TCP
