kyc-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kyc-service
  namespace: prod
spec:
  selector:
    app: kyc
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8084
    protocol: TCP
