notification-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: prod
spec:
  selector:
    app: notification
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8086
    protocol: TCP
