transfer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: transfer-service
  namespace: prod
spec:
  selector:
    app: transfer
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8082
    protocol: TCP
